--- a/extensions/chat-bubble/blocks/chat-interface.liquid
+++ b/extensions/chat-bubble/blocks/chat-interface.liquid
@@ -35,7 +35,7 @@
   window.shopChatConfig = {
     promptType: {{ block.settings.system_prompt | json }},
     welcomeMessage: {{ block.settings.welcome_message | json }},
-    appUrl: 'https://shop-chat-agent-morning-sunset-5014.fly.dev'
+    appUrl: 'https://shop-chat-agent-prod.fly.dev'
   };
   window.shopId = {{ shop.id }};
 </script>
